<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/name_label"
        android:id="@+id/namelabel"
        android:textSize="16pt"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameEditTextItem"
        android:hint="@string/name_hint"
        android:layout_below="@+id/namelabel"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameEditTextItem"
        android:id="@+id/itemNumberLabel"
        android:text="@string/item_number_label"
        android:textSize="10pt"
        android:layout_margin="6dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/itemNumberEditTextItem"
        android:hint="@string/item_number_hint"
        android:layout_below="@+id/nameEditTextItem"
        android:layout_alignParentRight="true"
        android:width="200sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemNumberLabel"
        android:id="@+id/packLabel"
        android:text="@string/pack_label"
        android:textSize="10pt"
        android:layout_margin="6dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/packEditTextItem"
        android:hint="@string/pack_hint"
        android:layout_below="@+id/itemNumberLabel"
        android:layout_alignParentRight="true"
        android:width="200sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/packLabel"
        android:id="@+id/PriceLabel"
        android:text="@string/price_label"
        android:textSize="10pt"
        android:layout_margin="6dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/priceEditTextItem"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/price_hint"
        android:layout_below="@id/packEditTextItem"
        android:layout_alignParentRight="true"
        android:width="200sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:id="@+id/activeLabel"
        android:text="@string/active_label"
        android:textSize="10pt"
        android:layout_below="@id/PriceLabel"
        android:layout_margin="6dp"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ActiveCheckbox"
        android:layout_below="@id/priceEditTextItem"
        android:layout_alignParentRight="true"
        android:layout_marginRight="170sp"/>


</RelativeLayout>